--- a/punchcardStyle.css
+++ b/punchcardStyle.css
@@ -1,5 +1,5 @@
 body{
-background-image: url(https://postimage.me/images/2025/05/09/bg.jpg);
+background-image: url(https://i.ibb.co/FL1mVdtQ/78028acd-a8ec-4135-97be-4d21cbd9ec38.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-attachment: fixed;
